atualizacao da camada de DAO

--- a/BackEnd/namesa-service/pom.xml
+++ b/BackEnd/namesa-service/pom.xml
@@ -96,11 +96,19 @@
 		    <artifactId>mssql-jdbc</artifactId>
 		    <version>6.2.0.jre8</version>
 		</dependency-->
-		<!--dependency>
-		    <groupId>com.microsoft.sqlserver</groupId>
-		    <artifactId>sqljdbc4</artifactId>
-		    <version>4.0</version>
+		
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>sqljdbc4</artifactId>
+			<version>4.0</version>
+		</dependency>
+		<!-- dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-jdbc</artifactId>
+		    <version>1.5.6.RELEASE</version>
 		</dependency-->
+
+
 	</dependencies>
 
 	<build>
