--- a/BackEnd/properties/application.properties
+++ b/BackEnd/properties/application.properties
@@ -12,6 +12,7 @@ spring.jpa.hibernate.ddl-auto = create-drop
 
 #URL SQL Server
 spring.datasource.url=jdbc:sqlserver://mssql.raindrops.com.br:1433;databaseName=NovaGestao
+spring.datasource.sqlserver.database=NovaGestao
 spring.datasource.username=usr_namesa
 spring.datasource.password=doze2000
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
