Ajustes para serviço

--- a/BackEnd/properties/application.properties
+++ b/BackEnd/properties/application.properties
@@ -1,29 +1,18 @@
-spring.jpa.show-sql=true
-spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto = create-drop
-
-
-#Basic Spring Boot Config for SQL
-#URL cloud aws/azure
-#spring.datasource.url= jdbc:oracle:thin:@00.00.000.000:1521/xe
-#spring.datasource.username=xxxx
-#spring.datasource.password=xxxx
-
-
-#URL SQL Server
-spring.datasource.url=jdbc:sqlserver://mssql.raindrops.com.br:1433;databaseName=NovaGestao
-spring.datasource.sqlserver.database=NovaGestao
-spring.datasource.username=usr_namesa
+#URL SQL Server - NaMesa
+spring.datasource.url=jdbc:sqlserver://mssql.raindrops.com.br:1433;databaseName=dbNamesa
+spring.datasource.username=usr_shpVagas
 spring.datasource.password=doze2000
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 
 #Logging Hibernate
 logging.level.org.hibernate.SQL=TRACE
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+Digital ocean 
+Microservices
+React/angular 2
+Mongo db
 
-#Parametros do Modulos
-server.rest.parametro.ip=http://localhost
-server.rest.parametro.porta=8080
-server.rest.parametro.pacote=/namesa-auth
 
